force-app/main/default/objects/Volunteer_Recurrence_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Text that will get copied to the Volunteer Hours Comment field for all Hours created by this Volunteer Recurrence Schedule.</description>
        <inlineHelpText>Text that will get copied to the Volunteer Hours Comment field for all Hours created by this Volunteer Recurrence Schedule.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Recurrence Schedules</relationshipLabel>
        <relationshipName>Volunteer_Recurrence_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Days_of_Week__c</fullName>
        <label>Days of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Set to 1 for an individual.  Set to a larger number if the Contact represents a group, and you will not be tracking each individual&apos;s hours.</description>
        <inlineHelpText>Set to 1 for an individual.  Set to a larger number if the Contact represents a group, and you will not be tracking each individual&apos;s hours.</inlineHelpText>
        <label>Number of Volunteers</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Date__c</fullName>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date_Time__c</fullName>
        <label>Schedule Start Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours_Status__c</fullName>
        <inlineHelpText>The Volunteer Hours Status value to specify on newly created Hours records.</inlineHelpText>
        <label>Volunteer Hours Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Recurrence Schedules</relationshipLabel>
        <relationshipName>Volunteer_Recurrence_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekly_Occurrence__c</fullName>
        <label>Weekly Occurrence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Every</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Volunteer Recurrence Schedule</label>
    <listViews>
        <fullName>AllVRS</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Volunteer_Job__c</columns>
        <columns>Weekly_Occurrence__c</columns>
        <columns>Days_of_Week__c</columns>
        <columns>Schedule_Start_Date_Time__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VRS-{00000}</displayFormat>
        <label>VRS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Recurrence Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VRS_Days_of_Week_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Days_of_Week__c)</errorConditionFormula>
        <errorDisplayField>Days_of_Week__c</errorDisplayField>
        <errorMessage>You must specify at least one value for Days of Week</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRS_Weekly_Occurrence_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Weekly_Occurrence__c)</errorConditionFormula>
        <errorDisplayField>Weekly_Occurrence__c</errorDisplayField>
        <errorMessage>You must specify at least one value for Weekly Occurrence</errorMessage>
    </validationRules>
</CustomObject>